--- a/_posts/2023-11-08-ruby-retreat-2023.md
+++ b/_posts/2023-11-08-ruby-retreat-2023.md
@@ -16,7 +16,7 @@ Having escaped the urban jungle of Berlin and being back home for a month, I’v
 ![Ruby Retreat Mountain](/assets/ruby-retreat-mountain.jpg)
 *Photo by Nick Malcom*
 
-The retreat was run in a loose [Unconference](https://en.wikipedia.org/wiki/Unconference) style, where attendees suggested and scheduled workshops and talks. Topics ranged from GIT rebasing strategies, working at a hazardous chemical lab, HTTP/3, and conversations about neurodiversity in the software engineering industry. 
+The retreat was run in a loose [unconference](https://en.wikipedia.org/wiki/Unconference) style, where attendees suggested and scheduled workshops and talks. Topics ranged from GIT rebasing strategies, working at a hazardous chemical lab, HTTP/3, and conversations about neurodiversity in the software engineering industry.
 
 Tables and couches were also spread throughout the rooms which invited spontaneous collaboration by hacking together on projects, playing games, and even music jam sessions. Meals were provided throughout the day as well as plentiful non-alcoholic and caffeinated drinks.
 
