Fix link of picture attribution

--- a/_posts/2023-11-08-ruby-retreat-2023.md
+++ b/_posts/2023-11-08-ruby-retreat-2023.md
@@ -22,7 +22,7 @@ Tables and couches were also spread throughout the rooms which invited spontaneo
 
 
 ![Ruby Retreat Group](/assets/ruby-retreat-group.jpg)
-*Photo by Pat Allan ([freelancing-gods.com])(https://freelancing-gods.com/)*
+*Photo by Pat Allan [(freelancing-gods.com)](https://freelancing-gods.com/)*
 
 The standard conference format of a presenter at a podium talking to a room full of silent attendees has never seemed to appeal to me. Whenever a presenter read line by line off their powerpoint presentation and spent too much time promoting their company, it made me wonder if the speaker was interested in the topic or if it was just a part of their job’s bonus scheme.
 
