--- a/_posts/2023-11-08-ruby-retreat-2023.md
+++ b/_posts/2023-11-08-ruby-retreat-2023.md
@@ -7,6 +7,7 @@ title: "Ruby Retreat 2023"
 
 ![Ruby Retreat Venue](/assets/ruby-retreat-venue.jpg)
 *Photo by Maysen Greenwood*
+{: style="text-align: center;"}
 
 Ruby Retreat 2023 was a four day retreat focused around the programming language Ruby in the mountains near my hometown, Ōtautahi Christchurch, New Zealand. The lodge is usually filled with keen skiers and snowboarders, but in the off season opens up to other events.
 
@@ -15,6 +16,7 @@ Having escaped the urban jungle of Berlin and being back home for a month, I’v
 
 ![Ruby Retreat Mountain](/assets/ruby-retreat-mountain.jpg)
 *Photo by Nick Malcom*
+{: style="text-align: center;"}
 
 The retreat was run in a loose [unconference](https://en.wikipedia.org/wiki/Unconference) style, where attendees suggested and scheduled workshops and talks. Topics ranged from GIT rebasing strategies, working at a hazardous chemical lab, HTTP/3, and conversations about neurodiversity in the software engineering industry.
 
@@ -23,6 +25,7 @@ Tables and couches were also spread throughout the rooms which invited spontaneo
 
 ![Ruby Retreat Group](/assets/ruby-retreat-group.jpg)
 *Photo by Pat Allan [(freelancing-gods.com)](https://freelancing-gods.com/)*
+{: style="text-align: center;"}
 
 The standard conference format of a presenter at a podium talking to a room full of silent attendees has never seemed to appeal to me. Whenever a presenter read line by line off their powerpoint presentation and spent too much time promoting their company, it made me wonder if the speaker was interested in the topic or if it was just a part of their job’s bonus scheme.
 
@@ -30,6 +33,7 @@ I found myself getting more value from spontaneous interactions while waiting fo
 
 ![Ruby Retreat Paws](/assets/ruby-retreat-paws.jpg)
 *Photo by Michael Yin*
+{: style="text-align: center;"}
 
 Ruby Retreat 2023 was a reminder to me about the significance of community. 
 
