Add images for 2024 review

--- a/_posts/2025-05-19-2024-review.md
+++ b/_posts/2025-05-19-2024-review.md
@@ -1,13 +1,12 @@
 ---
 layout: post
 title: "2024 Review"
-image: /assets/2024-review/cover.jpg
+image: /assets/2024-review/flag.jpg
 ---
 
-# 2024 Review
-
-![][image1]
-\[Plaza de la Constitución in the heart of Mexico City\]
+<img src="/assets/2024-review/flag.jpg"/>
+_Plaza de la Constitución in the heart of Mexico City_
+{: style="text-align: center;"}
 
 I moved to Mexico City\! My life was yet again uprooted from my hometown Ōtautahi, New Zealand, after living in Berlin for 10 years. Being far away from family, as well as my first stint at entrepreneurship, made for a rocky 2024\. But what smoothed it out was rediscovering something that was with me all along.
 
@@ -17,22 +16,27 @@ Luckily I found an apartment quickly. But an apartment isn't a home until you fe
 
 But what are locations without people? Community is also huge, events at coworking space Haab, Fight Club (experience based networking events), Hashtag Art Gallery and even co-hosting my own new event series 'Tacos y Tech', have all been súper important in fostering meaningful relationships.
 
-![][image2]
-\[The latest (3rd) Tacos y Tech event\]
+<img src="/assets/2024-review/tyt.png"/>
+_The latest Tacos y Tech event_
+{: style="text-align: center;"}
 
 ## Entrepreneurship
 
 2024 was my first stint at entrepreneurship, as two friends (and ex-coworkers) and I got together to build a start-up. We hit some major roadblocks early: not having a network in Mexico, different opinions on tech, and not finding a problem to solve.
 
-![][image3]
-\[Antonio, Jakub, and me at an offsite in Valle de Bravo\]
+<img src="/assets/2024-review/offsite.png"/>
+_Antonio, Jakub, and me at an offsite in Valle de Bravo_
+{: style="text-align: center;"}
 
 Ultimately I went back to freelancing as a product/frontend/full stack engineer, to buy time to build up a local network, as well as discover more problems unique to Mexico.
 
 I still want to solve a big problem™, but I now believe the discovery phase develops better in background slower thinking instead of focused workshops. I'm also more interested in self-funding rather than applying for any incubators or VC firms.
 
-![][image4]![][image5]![][image6]![][image7]
-\[My favorite books of 2024\]
+<img src="/assets/2024-review/book1.jpg"/>
+<img src="/assets/2024-review/book3.jpg"/>
+<img src="/assets/2024-review/book4.jpg"/>
+_My favorite books of 2024_
+{: style="text-align: center;"}
 
 ## Mental Health
 
@@ -42,8 +46,9 @@ The English speaking community in Mexico City is more transient than cities like
 
 But I'm happy to say I've made some real connections. Ultimately Mexico City is a place that attracts a specific type of person and lifestyle, and it's easy to connect over that.
 
-![][image8]
-\[Fight Club Networking Hike\]
+<img src="/assets/2024-review/hiking.jpg"/>
+_Fight Club Networking Hike_
+{: style="text-align: center;"}
 
 Shout out to therapy and exercise. Don't know where I would be without you.
 
@@ -51,8 +56,9 @@ Shout out to therapy and exercise. Don't know where I would be without you.
 
 Nature is always great at bringing me back to ground level, and visiting Chapultapec has recently become a necessity. Chapultepec is Mexico City's national park, and it's huge. It's almost twice the size as Central Park in New York, and is a quick bike ride from my apartment.
 
-![][image9]
-\[magnificent Chapultapec, in the center of Mexico City\]
+<img src="/assets/2024-review/chapultapec.jpg"/>
+_Magnificent Chapultapec_
+{: style="text-align: center;"}
 
 When needed, I make my way over to sling my hammock up and... do nothing. The stillness calms my soul, and does a great job resetting my nervous system from Mexico City's sometimes overwhelming combination of people and noise.
 
@@ -62,6 +68,6 @@ When needed, I make my way over to sling my hammock up and... do nothing. The st
 
 2025 for now is about working on interesting projects, strengthening relationships, and iterating on product ideas around AI that can help the climate crisis.
 
-Thanks for reading. If you're ever in Mexico City Edna and I would love to show you around\!
+<img src="/assets/2024-review/cheers.jpg"/>
 
-![][image10]
+Thanks for reading. If you're ever in Mexico City Edna and I would love to show you around!
