Update more images

--- a/_posts/2025-05-19-2024-review.md
+++ b/_posts/2025-05-19-2024-review.md
@@ -24,7 +24,7 @@ _The latest Tacos y Tech event_
 
 2024 was my first stint at entrepreneurship, as two friends (and ex-coworkers) and I got together to build a start-up. We hit some major roadblocks early: not having a network in Mexico, different opinions on tech, and not finding a problem to solve.
 
-<img src="/assets/2024-review/offsite.png"/>
+<img src="/assets/2024-review/offsite.jpg"/>
 _Antonio, Jakub, and me at an offsite in Valle de Bravo_
 {: style="text-align: center;"}
 
@@ -32,9 +32,11 @@ Ultimately I went back to freelancing as a product/frontend/full stack engineer,
 
 I still want to solve a big problem™, but I now believe the discovery phase develops better in background slower thinking instead of focused workshops. I'm also more interested in self-funding rather than applying for any incubators or VC firms.
 
-<img src="/assets/2024-review/book1.jpg"/>
-<img src="/assets/2024-review/book3.jpg"/>
-<img src="/assets/2024-review/book4.jpg"/>
+<div style="display: flex; justify-content: space-around; align-items: center;">
+    <img src="/assets/2024-review/book1.jpg" width="200px"/>
+    <img src="/assets/2024-review/book3.jpg" width="200px"/>
+    <img src="/assets/2024-review/book4.jpg" width="200px"/>
+</div>
 _My favorite books of 2024_
 {: style="text-align: center;"}
 
@@ -44,11 +46,11 @@ Lack of community and career uncertainty have been the largest challenges of 202
 
 The English speaking community in Mexico City is more transient than cities like Berlin as 80%+ come from the U.S. which is only a few hours flight back home. One of the first questions I ask now is how long someone actually intends to stay here.
 
-But I'm happy to say I've made some real connections. Ultimately Mexico City is a place that attracts a specific type of person and lifestyle, and it's easy to connect over that.
-
 <img src="/assets/2024-review/hiking.jpg"/>
 _Fight Club Networking Hike_
 {: style="text-align: center;"}
+
+But I'm happy to say I've made some real connections. Ultimately Mexico City is a place that attracts a specific type of person and lifestyle, and it's easy to connect over that.
 
 Shout out to therapy and exercise. Don't know where I would be without you.
 
