Adjust image sizing

--- a/_posts/2025-05-19-2024-review.md
+++ b/_posts/2025-05-19-2024-review.md
@@ -16,8 +16,10 @@ Luckily I found an apartment quickly. But an apartment isn't a home until you fe
 
 But what are locations without people? Community is also huge, events at coworking space Haab, Fight Club (experience based networking events), Hashtag Art Gallery and even co-hosting my own new event series 'Tacos y Tech', have all been súper important in fostering meaningful relationships.
 
-<img src="/assets/2024-review/tyt.png"/>
-_The latest Tacos y Tech event_
+<div style="display: flex; justify-content: space-around; align-items: center;">
+<img src="/assets/2024-review/tyt.png" width="400px"/>
+</div>
+_Tacos y Tech #3_
 {: style="text-align: center;"}
 
 ## Entrepreneurship
@@ -72,4 +74,4 @@ When needed, I make my way over to sling my hammock up and... do nothing. The st
 
 <img src="/assets/2024-review/cheers.jpg"/>
 
-Thanks for reading. If you're ever in Mexico City Edna and I would love to show you around!
+Thanks for reading. If you're ever in Mexico City, Edna and I would love to show you around!
