Update images more

--- a/_posts/2025-05-19-2024-review.md
+++ b/_posts/2025-05-19-2024-review.md
@@ -4,17 +4,17 @@ title: "2024 Review"
 image: /assets/2024-review/flag.jpg
 ---
 
-<img src="/assets/2024-review/flag.jpg"/>
-_Plaza de la Constitución in the heart of Mexico City_
-{: style="text-align: center;"}
+<div style="text-align: center">
+    <img src="/assets/2024-review/flag.jpg" width="500px"/>
+</div>
 
-I moved to Mexico City\! My life was yet again uprooted from my hometown Ōtautahi, New Zealand, after living in Berlin for 10 years. Being far away from family, as well as my first stint at entrepreneurship, made for a rocky 2024\. But what smoothed it out was rediscovering something that was with me all along.
+I moved to Mexico City! My life was yet again uprooted from my hometown Ōtautahi, New Zealand, after living in Berlin for 10 years. Being far away from family, as well as my first stint at entrepreneurship, made for a rocky 2024. But what smoothed it out was rediscovering something that was with me all along.
 
 ## My new home
 
-Luckily I found an apartment quickly. But an apartment isn't a home until you feel comfortable and familiar with your surroundings, and with a population of 20 million there's plenty to discover\! I quickly got to work finding the best taco shop (next door), breakfast cafe, and of course OXXO.
+Luckily I found an apartment quickly. But an apartment isn't a home until you feel comfortable and familiar with your surroundings, and with a population of 20 million there's plenty to discover! I quickly got to work finding the best taco shop (next door), breakfast cafe, and of course OXXO.
 
-But what are locations without people? Community is also huge, events at coworking space Haab, Fight Club (experience based networking events), Hashtag Art Gallery and even co-hosting my own new event series 'Tacos y Tech', have all been súper important in fostering meaningful relationships.
+But what are locations without people? Community is also huge, events at coworking space Haab, Fight Club (non-boring networking events), Hashtag Art Gallery and even co-hosting my own new event series 'Tacos y Tech', have all been súper important in fostering meaningful relationships.
 
 <div style="display: flex; justify-content: space-around; align-items: center;">
 <img src="/assets/2024-review/tyt.png" width="400px"/>
@@ -44,7 +44,7 @@ _My favorite books of 2024_
 
 ## Mental Health
 
-Lack of community and career uncertainty have been the largest challenges of 2024\.
+Lack of community and career uncertainty have been the largest challenges of 2024.
 
 The English speaking community in Mexico City is more transient than cities like Berlin as 80%+ come from the U.S. which is only a few hours flight back home. One of the first questions I ask now is how long someone actually intends to stay here.
 
