--- a/_posts/2025-05-19-2024-review.md
+++ b/_posts/2025-05-19-2024-review.md
@@ -4,11 +4,13 @@ title: "2024 Review"
 image: /assets/2024-review/flag.jpg
 ---
 
-<div style="text-align: center">
-    <img src="/assets/2024-review/flag.jpg" width="500px"/>
-</div>
+<p>
+    <div style="display: flex; justify-content: center;">
+        <img src="/assets/2024-review/flag.jpg" width="500px"/>
+    </div>
+</p>
 
-I moved to Mexico City! My life was yet again uprooted from my hometown Ōtautahi, New Zealand, after living in Berlin for 10 years. Being far away from family, as well as my first stint at entrepreneurship, made for a rocky 2024. But what smoothed it out was rediscovering something that was with me all along.
+I moved to Mexico City! My life was yet again uprooted from my hometown Ōtautahi, New Zealand, after living in Berlin for 10 years. Being far from family, as well as my first stint at entrepreneurship, made for a rocky 2024. But what smoothed it out was rediscovering something that was with me all along.
 
 ## My new home
 
@@ -68,7 +70,7 @@ When needed, I make my way over to sling my hammock up and... do nothing. The st
 
 ## 2025
 
-2024 has reminded me of the importance of nature, especially in front of the huge climate crisis we're all facing. A big reason for moving to Mexico was to figure out what I could build to help the local community. I'm now confident that reducing the climate impact will be a big part of that.
+2024 has reminded me of the role of nature in our lives, especially in front of the huge climate crisis we're all facing. A big reason for moving to Mexico was to figure out what I could build to help the local community. I'm now confident that reducing the climate impact will be a big part of that.
 
 2025 for now is about working on interesting projects, strengthening relationships, and iterating on product ideas around AI that can help the climate crisis.
 
