--- a/_posts/2025-05-19-2024-review.md
+++ b/_posts/2025-05-19-2024-review.md
@@ -72,8 +72,8 @@ When needed, I make my way over to sling my hammock up and... do nothing. The st
 
 2024 has reminded me of the role of nature in our lives, especially in front of the huge climate crisis we're all facing. A big reason for moving to Mexico was to figure out what I could build to help the local community. I'm now confident that reducing the climate impact will be a big part of that.
 
-2025 for now is about working on interesting projects, strengthening relationships, and iterating on product ideas around AI that can help the climate crisis.
+2025 for now is about strengthening relationships, exploring product ideas around AI that can help the climate crisis, as well as freelancing with mobile/web projects. If you know of any that need an extra dev, let me know :).
 
 <img src="/assets/2024-review/cheers.jpg"/>
 
-Thanks for reading. If you're ever in Mexico City, Edna and I would love to show you around!
+2025 so far has already been a while ride, and I'm excited to see what further in the future holds. Thanks for reading, if you're ever in Mexico City, Edna and I would love to show you around.
