Adjust end of blog

--- a/_posts/2025-05-19-2024-review.md
+++ b/_posts/2025-05-19-2024-review.md
@@ -74,6 +74,6 @@ When needed, I make my way over to sling my hammock up and... do nothing. The st
 
 2025 for now is about strengthening relationships, exploring product ideas around AI that can help the climate crisis, as well as freelancing with mobile/web projects. If you're building something interesting with AI, I'd love to chat! simonhfrost(@)gmail.com
 
-<img src="/assets/2024-review/cheers.jpg"/>
+Thanks for reading, if you're ever in Mexico City, Edna and I would love to show you around :)
 
-2025 so far has already been a while ride, and I'm excited to see what further in the future holds. Thanks for reading, if you're ever in Mexico City, Edna and I would love to show you around.
+<img src="/assets/2024-review/cheers.jpg"/>
