Correct park size comparison

--- a/_posts/2025-05-19-2024-review.md
+++ b/_posts/2025-05-19-2024-review.md
@@ -60,7 +60,7 @@ Shout out to therapy and exercise. Don't know where I would be without you.
 
 ## Chapultapec
 
-Nature is always great at bringing me back to ground level, and visiting Chapultapec has recently become a necessity. Chapultepec is Mexico City's national park, and it's huge. It's almost twice the size as Central Park in New York, and is a quick bike ride from my apartment.
+Nature is always great at bringing me back to ground level, therefore visiting Chapultapec has recently become a necessity. Chapultepec is Mexico City's national park, and it's huge. It's over twice the size as Central Park in New York, and is a quick bike ride from my apartment.
 
 <img src="/assets/2024-review/chapultapec.jpg"/>
 _Magnificent Chapultapec_
@@ -74,6 +74,6 @@ When needed, I make my way over to sling my hammock up and... do nothing. The st
 
 2025 for now is about strengthening relationships, exploring product ideas around AI that can help the climate crisis, as well as freelancing with mobile/web projects. If you're building something interesting with AI, I'd love to chat! simonhfrost(@)gmail.com
 
-Thanks for reading, if you're ever in Mexico City, Edna and I would love to show you around :)
+Thanks for reading! if you're ever in Mexico City, Edna and I would love to show you around :)
 
 <img src="/assets/2024-review/cheers.jpg"/>
