Emphasis AI focus

--- a/_posts/2025-05-19-2024-review.md
+++ b/_posts/2025-05-19-2024-review.md
@@ -32,7 +32,9 @@ _Tacos y Tech #3_
 _Antonio, Jakub, and me at an offsite in Valle de Bravo_
 {: style="text-align: center;"}
 
-Ultimately I went back to freelancing as a product/frontend/full stack engineer, to buy time to build up a local network, as well as discover more problems unique to Mexico.
+Ultimately I went back to freelancing as a product/full stack engineer to buy time to build up a local network, as well as discover more problems unique to Mexico.
+
+AI has also been a huge focus recently, with most projects having a chatbot, tech like vector databases, or agents.
 
 I still want to solve a big problem™, but I now believe the discovery phase develops better in background slower thinking instead of focused workshops. I'm also more interested in self-funding rather than applying for any incubators or VC firms.
 
@@ -72,7 +74,7 @@ When needed, I make my way over to sling my hammock up and... do nothing. The st
 
 2024 has reminded me of the role of nature in our lives, especially in front of the huge climate crisis we're all facing. A big reason for moving to Mexico was to figure out what I could build to help the local community. I'm now confident that reducing the climate impact will be a big part of that.
 
-2025 for now is about strengthening relationships, exploring product ideas around AI that can help the climate crisis, as well as freelancing with mobile/web projects. If you're building something interesting with AI, I'd love to chat! simonhfrost(@)gmail.com
+2025 for now is about strengthening relationships, exploring product ideas around AI that can help the climate crisis, as well as freelancing with building AI focused apps. If you're building something interesting, I'd love to chat! simonhfrost(@)gmail.com
 
 Thanks for reading! if you're ever in Mexico City, Edna and I would love to show you around :)
 
