--- a/_posts/2025-05-19-2024-review.md
+++ b/_posts/2025-05-19-2024-review.md
@@ -74,7 +74,7 @@ When needed, I make my way over to sling my hammock up and... do nothing. The st
 
 2024 has reminded me of the role of nature in our lives, especially in front of the huge climate crisis we're all facing. A big reason for moving to Mexico was to figure out what I could build to help the local community. I'm now confident that reducing the climate impact will be a big part of that.
 
-2025 for now is about strengthening relationships, exploring product ideas that can help the climate crisis, freelancing, and building AI focused apps. If you're building something interesting, I'd love to chat! simonhfrost(@)gmail.com
+2025 is about strengthening relationships, exploring product ideas around the climate crisis, freelancing, and building AI focused apps. If you're building something interesting, I'd love to chat! simonhfrost(@)gmail.com
 
 Thanks for reading! if you're ever in Mexico City, Edna and I would love to show you around :)
 
