Fix books in mobile view

--- a/_posts/2025-05-28-2024-review.md
+++ b/_posts/2025-05-28-2024-review.md
@@ -38,10 +38,18 @@ AI has also been a huge focus recently, focusing on projects that have a chatbot
 
 I still want to solve a big problem™, but I now believe the discovery phase develops better in background slower thinking instead of focused workshops. I'm also more interested in self-funding rather than applying for any incubators or VC firms.
 
-<div style="display: flex; justify-content: space-around; align-items: center;">
-    <img src="/assets/2024-review/book1.jpg" width="200px"/>
-    <img src="/assets/2024-review/book3.jpg" width="200px"/>
-    <img src="/assets/2024-review/book4.jpg" width="200px"/>
+<style>
+@media (max-width: 768px) {
+    .book-images img {
+        max-height: 150px !important;
+    }
+}
+</style>
+
+<div class="book-images" style="width: 100%; display: flex; justify-content: center; align-items: center; gap: 20px;">
+    <img src="/assets/2024-review/book1.jpg" style="height: auto;"/>
+    <img src="/assets/2024-review/book3.jpg" style="height: auto;"/>
+    <img src="/assets/2024-review/book4.jpg" style="height: auto;"/>
 </div>
 _My favorite books of 2024_
 {: style="text-align: center;"}
