Update book sizes

--- a/_posts/2025-05-28-2024-review.md
+++ b/_posts/2025-05-28-2024-review.md
@@ -39,9 +39,27 @@ AI has also been a huge focus recently, focusing on projects that have a chatbot
 I still want to solve a big problem™, but I now believe the discovery phase develops better in background slower thinking instead of focused workshops. I'm also more interested in self-funding rather than applying for any incubators or VC firms.
 
 <style>
+/* Desktop - keep original sizing */
+.book-images img {
+    height: auto;
+    max-height: 200px;
+}
+
+/* Tablet */
+@media (max-width: 1024px) and (min-width: 769px) {
+    .book-images img {
+        max-height: 160px !important;
+    }
+}
+
+/* Mobile */
 @media (max-width: 768px) {
     .book-images img {
-        max-height: 150px !important;
+        max-height: 130px !important;
+        max-width: 85px !important;
+    }
+    .book-images {
+        gap: 10px !important;
     }
 }
 </style>
