--- a/_posts/2025-12-19-optimism.md
+++ b/_posts/2025-12-19-optimism.md
@@ -29,4 +29,6 @@ Finance knows that high riskier investments are recommended over long time perio
 Hopefully I managed to convince you to be a little more optimistic. The book ​Factfulness breaks down why the world is progressing a lot faster than we think, and has been a big influence on me being more optimistic. I would highly recommend it to anyone.
 
 
-![Wander](/assets/optimism/factfulness.jpg)
+<div style="display: flex; justify-content: center;">
+    <img src="/assets/optimism/factfulness.jpg" style="max-height: 300px;"/>
+</div>
