--- a/_posts/2025-12-19-optimism.md
+++ b/_posts/2025-12-19-optimism.md
@@ -4,30 +4,29 @@ title: "Optimism"
 image: /assets/optimism/hippy.png
 ---
 
-Being optimistic helps you achieve more, be more fun, and… less sad. Here are three thoughts on optimism that... might change the way you look at things.
+Being optimistic makes it easier to achieve more, and be happier. Here are three thoughts on optimism that might make you more optimistic about life.
 
 ## Manifesting isn’t just for hippies
 
-Actively thinking about succeeding at something will make it more likely to happen, you can’t find it if you’re not looking for it. It forces you to face unknowns, and make a plan for recovery instead of pretending it won’t happen. Your subconscious is more powerful than you think, so use it to your advantage.
+Actively thinking about succeeding will make goals more likely to happen, you can’t find something if you’re not looking for it. It also forces you to face unknowns, and make a plan for recovery instead of pretending it won’t happen. Your subconscious is more powerful than you think, so put it to work.
 
 ![Hippy](/assets/optimism/hippy.png)
 
 ## Humans of the internet-age are scared
 
-We’re in a unique time period where you can instantly communicate to anyone in the world. News travels fast, but negative news travels faster because through natural evolution we’re trained to pay attention to danger for survival. Social media knows this, and profits from it by showing intentionally controversial content. Acknowledging that you’re hardwired to perceive negativity more, means you’re investing in yourself and can start resetting the balance in your favour.
+Humans have entered a time where you can instantly communicate to anyone in the world. News travels fast, but negative news travels faster since we're trained to pay attention to danger for survival. Social media knows this, and profits from it by showing intentionally controversial content. Acknowledging that you’re hardwired to perceive negativity more, means you’re investing in yourself and can start resetting your perception in your favour.
 
 ![Hippy](/assets/optimism/think.png)
 
-## Start young
+## It's better to start young
 
-Finance knows that high riskier investments are recommended over long time periods, if it dips you have longer time to recover. Taking risks at a younger age means you have more attempts to make things stick. This is doubly so with privilege! Acknowledge any privilege you might have, and take the risk.
+In the finance world, high risk investments are recommended over long time periods. If your investment falters, it has a longer time to recover. Taking risks at a younger age means you have more attempts to make things stick. This is doubly so with privilege! Acknowledge any privilege you might have, and use it to your advantage.
 
 ![Wander](/assets/optimism/wander.png)
 
 ## Conclusion
 
-Hopefully I managed to convince you to be a little more optimistic. The book ​Factfulness breaks down why the world is progressing a lot faster than we think, and has been a big influence on me being more optimistic. I would highly recommend it to anyone.
-
+These are three thoughts I've had recently justifying. The book ​Factfulness breaks down why the world is progressing a lot faster than we think, and has been a big influence on me being more optimistic. I would highly recommend it to anyone.
 
 <div style="display: flex; justify-content: center;">
     <img src="/assets/optimism/factfulness.jpg" style="max-height: 300px;"/>
