Use image border for optimisim blog

--- a/_posts/2025-12-19-optimism.md
+++ b/_posts/2025-12-19-optimism.md
@@ -4,6 +4,13 @@ title: "Optimism"
 image: /assets/optimism/hippy.png
 ---
 
+<style>
+.post-content img {
+  border: 1px solid black;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4);
+}
+</style>
+
 Being optimistic makes it easier to achieve more, and be happier. Here are three thoughts on optimism that might make you more optimistic about life.
 
 ## Manifesting isn’t just for hippies
