Adjust optimism intro/outro

--- a/_posts/2025-12-19-optimism.md
+++ b/_posts/2025-12-19-optimism.md
@@ -11,7 +11,7 @@ image: /assets/optimism/hippy.png
 }
 </style>
 
-Being optimistic makes it easier to achieve more, and be happier. Here are three thoughts on optimism that might make you more optimistic about life.
+Optimism isn't naive, it's strategic. Here are three reasons why choosing optimism is a rational decision, not wishful thinking.
 
 ## Manifesting isn’t just for hippies
 
@@ -19,7 +19,7 @@ Actively thinking about succeeding will make goals more likely to happen, you ca
 
 ![Hippy](/assets/optimism/hippy.png)
 
-## Humans of the internet-age are scared
+## Humans of the internet age are scared
 
 Humans have entered a time where you can instantly communicate to anyone in the world. News travels fast, but negative news travels faster since we're trained to pay attention to danger for survival. Social media knows this, and profits from it by showing intentionally controversial content. Acknowledging that you’re hardwired to perceive negativity more, means you’re investing in yourself and can start resetting your perception in your favour.
 
@@ -33,7 +33,7 @@ In the finance world, high risk investments are recommended over long time perio
 
 ## Conclusion
 
-These are three thoughts I've had recently justifying. The book ​Factfulness breaks down why the world is progressing a lot faster than we think, and has been a big influence on me being more optimistic. I would highly recommend it to anyone.
+Optimism isn't about ignoring problems - it's about believing they can be solved. The book Factfulness breaks down why the world is progressing faster than we think, and reinforced my view that optimism is the rational choice. I'd highly recommend it to anyone.
 
 <div style="display: flex; justify-content: center;">
     <img src="/assets/optimism/factfulness.jpg" style="max-height: 300px;"/>
