Update humans statement

--- a/_posts/2025-12-19-optimism.md
+++ b/_posts/2025-12-19-optimism.md
@@ -21,7 +21,7 @@ Actively thinking about succeeding will make goals more likely to happen, you ca
 
 ## Humans of the internet age are scared
 
-Humans have entered a time where you can instantly communicate to anyone in the world. News travels fast, but negative news travels faster since we're trained to pay attention to danger for survival. Social media knows this, and profits from it by showing intentionally controversial content. Acknowledging that you’re hardwired to perceive negativity more, means you’re investing in yourself and can start resetting your perception in your favour.
+Humans can now instantly communicate to anyone in the world. News travels fast, but negative news travels faster since we're trained to pay attention to danger for survival. Social media knows this, and profits from it by showing intentionally controversial content. Acknowledging that you’re hardwired to perceive negativity more, means you’re investing in yourself and can start resetting your perception in your favour.
 
 ![Hippy](/assets/optimism/think.png)
 
