--- a/_posts/2025-12-19-optimism.md
+++ b/_posts/2025-12-19-optimism.md
@@ -33,7 +33,7 @@ In the finance world, high risk investments are recommended over long time perio
 
 ## Conclusion
 
-Optimism isn't about ignoring problems - it's about believing they can be solved. The book Factfulness breaks down why the world is progressing faster than we think, and reinforced my view that optimism is the rational choice. I'd highly recommend it to anyone.
+Optimism isn't about ignoring problems - it's about believing they can be solved. The book Factfulness breaks down why the world is progressing faster than we think, and reinforced my view that optimism is the rational choice. So what are you optimistic about?
 
 <div style="display: flex; justify-content: center;">
     <img src="/assets/optimism/factfulness.jpg" style="max-height: 300px;"/>
